[tool.poetry]
name = "lightcontroller"
version = "0.1.0"
description = "Application for controlling IoT devices"
authors = ["laga-vladislav <laga.ladislav@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywizlight = "^0.5.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
